--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.16.4" %}
+{% set version = "1.17.1" %}
 
 package:
   name: krb5
@@ -6,16 +6,11 @@ package:
 
 source:
   url: https://github.com/krb5/krb5/archive/krb5-{{ version }}-final.tar.gz
-  sha256: d1263b804161c542097b31522244b97ad59daf4a456c9a626aff7f31b2037e45
-  patches:
-    - eafnosupport.patch  # [win and vc<14]
-    - jsoneoverflow.patch  # [win and vc<14]
-    - afxres.patch  # [win and vc<14]
-    - lshutil.patch  # [win and vc<14]
-    # - escape_curly_braces.patch
+  sha256: 8bdedbfb0bbb245217e23290437916d70b315514e6f7cc088b6e82d1310afe0b
 
 build:
   number: 0
+  skip: True  # [win and vc<14]
   run_exports:
     # stable within minor revisions: https://abi-laboratory.pro/tracker/timeline/krb5/
     - {{ pin_subpackage('krb5', max_pin='x.x') }}
@@ -36,7 +31,6 @@ requirements:
     - python      # [win]
     - openssl
   host:
-    - msinttypes  # [win and vc<14]
     - libedit     # [unix]
     - openssl
     - tk
