--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,13 +52,14 @@ test:
     - python <3.8   # [win]
 
 about:
-  home: http://web.mit.edu/kerberos/
+  home: https://web.mit.edu/kerberos/
   license: MIT
   license_file: doc/notice.rst
+  license_family: MIT
   summary: 'A network authentication protocol.'
   description: |
     Kerberos is a network authentication protocol. It is designed to provide strong authentication for client/server applications by using secret-key cryptography. 
-  doc_url: http://web.mit.edu/kerberos/krb5-1.19/doc/index.html
+  doc_url: https://web.mit.edu/kerberos/krb5-1.19/doc/index.html
   dev_url: https://kerberos.org/dist/index.html
 
 extra:
