--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,20 +62,29 @@ outputs:
       - lib/libverto*.dylib       # [osx]
       - lib/libcrypto*.dylib      # [osx]
       - lib/libssl*.dylib         # [osx]
-      - lib/*.dll                 # [win]
+      - Library/lib/*.lib         # [win]
+      - Library/bin/*.dll         # [win]
       # Headers  
-      - include/**/*
+      - include/**/*              # [unix]
+      - Library/include/**/*      # [win]
       # Development tools only
-      - bin/krb5-config        # [unix]
-      - bin/compile_et         # [unix]
+      - bin/krb5-config           # [unix]
+      - bin/compile_et            # [unix]
       # Package config files
-      - lib/pkgconfig/*.pc
+      - lib/pkgconfig/*.pc        # [unix]
       # Plugin architecture
-      - lib/krb5/plugins/**/*
+      - lib/krb5/plugins/**/*     # [unix]
+      - Library/bin/plugins/**/*  # [win]
       # Development support files
-      - share/et/**/*
+      - share/et/**/*             # [unix]
+      - share/examples/**/*       # [unix]
+      - share/locale/**/*         # [unix]
+      # Man pages for development tools
       - share/man/man1/krb5-config.1  # [unix]
       - share/man/man1/compile_et.1   # [unix]
+      # General man pages that belong with libraries
+      - share/man/man5/**/*       # [unix]
+      - share/man/man7/**/*       # [unix]
     build:
       run_exports:
         - {{ pin_subpackage('libkrb5', max_pin='x.x') }}
@@ -102,21 +111,55 @@ outputs:
         - pkg-config  # [unix]
         - make        # [unix]
         - python *    # [not win]
-        - gettext
+        - gettext     # [not win]
       host:
         - libedit {{ libedit}}  # [unix]
         - openssl {{ openssl }}
       run:
     test:
       commands:
+        # Test core krb5 libraries
         - test -f $PREFIX/lib/libkrb5.so                    # [linux]
         - test -f $PREFIX/lib/libkrb5.dylib                 # [osx]
         - test -f $PREFIX/lib/libgssapi_krb5.so             # [linux]
         - test -f $PREFIX/lib/libgssapi_krb5.dylib          # [osx]
-        - krb5-config --version
+        - test -f $PREFIX/lib/libk5crypto.so                # [linux]
+        - test -f $PREFIX/lib/libk5crypto.dylib             # [osx]
+        - test -f $PREFIX/lib/libcom_err.so                 # [linux]
+        - test -f $PREFIX/lib/libcom_err.dylib              # [osx]
+        - test -f $PREFIX/lib/libgssrpc.so                  # [linux]
+        - test -f $PREFIX/lib/libgssrpc.dylib               # [osx]
+        # Test Windows libraries
+        - test -f $PREFIX/Library/lib/krb5_64.lib           # [win]
+        - test -f $PREFIX/Library/bin/krb5_64.dll           # [win]
+        - test -f $PREFIX/Library/lib/gssapi64.lib          # [win]
+        - test -f $PREFIX/Library/bin/gssapi64.dll          # [win]
+        # Test essential headers
+        - test -f $PREFIX/include/krb5.h                    # [unix]
+        - test -f $PREFIX/include/gssapi.h                  # [unix]
+        - test -f $PREFIX/Library/include/krb5.h            # [win]
+        - test -f $PREFIX/Library/include/gssapi.h          # [win]
+        # Test development tools (should be in libkrb5)
+        - krb5-config --version                             # [unix]
         - test -f $PREFIX/bin/krb5-config                   # [unix]
+        - test -f $PREFIX/bin/compile_et                    # [unix]
+        # Test package config files
+        - test -f $PREFIX/lib/pkgconfig/krb5.pc             # [unix]
+        - test -f $PREFIX/lib/pkgconfig/krb5-gssapi.pc     # [unix]
+        # Test plugin directory exists
+        - test -d $PREFIX/lib/krb5/plugins                  # [unix]
+        - test -d $PREFIX/Library/bin/plugins               # [win]
+        # Test locale files exist
+        - test -f $PREFIX/share/locale/en_US/LC_MESSAGES/mit-krb5.mo  # [unix]
+        # Test examples exist
+        - test -f $PREFIX/share/examples/krb5/krb5.conf     # [unix]
+        # Test man pages for dev tools
+        - test -f $PREFIX/share/man/man1/krb5-config.1      # [unix]
+        - test -f $PREFIX/share/man/man5/krb5.conf.5        # [unix]
+        # Ensure user utilities are NOT in libkrb5
         - test ! -f $PREFIX/bin/kinit                       # [unix]
         - test ! -f $PREFIX/bin/klist                       # [unix]
+        - test ! -f $PREFIX/bin/kadmin                      # [unix]
 
   - name: {{ name }}
     script: build-krb5.sh   # [unix]
@@ -136,6 +179,22 @@ outputs:
       - bin/sclient            # [unix]
       - bin/sim_client         # [unix]
       - bin/uuclient           # [unix]
+      - bin/ksu                # [linux]
+      # Windows executables
+      - Library/bin/kinit.exe           # [win]
+      - Library/bin/klist.exe           # [win]
+      - Library/bin/kdestroy.exe        # [win]
+      - Library/bin/kpasswd.exe         # [win]
+      - Library/bin/kswitch.exe         # [win]
+      - Library/bin/kvno.exe            # [win]
+      - Library/bin/gss-client.exe      # [win]
+      - Library/bin/gss-server.exe      # [win]
+      - Library/bin/kcpytkt.exe         # [win]
+      - Library/bin/kdeltkt.exe         # [win]
+      - Library/bin/kfwcpcc.exe         # [win]
+      - Library/bin/mit2ms.exe          # [win]
+      - Library/bin/ms2mit.exe          # [win]
+      - Library/bin/ccapiserver.exe     # [win]
       # Server utilities
       - sbin/kadmin.local      # [unix]
       - sbin/kadmind           # [unix]
@@ -160,6 +219,7 @@ outputs:
       - share/man/man1/k5srvutil.1     # [unix]
       - share/man/man1/kadmin.1        # [unix]
       - share/man/man1/sclient.1       # [unix]
+      - share/man/man1/ksu.1           # [linux]
       - share/man/man8/kadmin.local.8  # [unix]
       - share/man/man8/kadmind.8       # [unix]
       - share/man/man8/kdb5_util.8     # [unix]
@@ -168,18 +228,56 @@ outputs:
       - share/man/man8/kproplog.8      # [unix]
       - share/man/man8/krb5kdc.8       # [unix]
       - share/man/man8/sserver.8       # [unix]
+      - share/man/man8/kdb5_ldap_util.8 # [unix]
     requirements:
       run:
         - {{ pin_subpackage('libkrb5', exact=True) }}
         - libedit  # [unix]
     test:
       commands:
-        - kinit 2>&1 | grep -q "Usage:" || true       # [unix]
-        - klist 2>&1 | grep -q "Usage:" || true       # [unix]  
-        - test -f $PREFIX/bin/kdestroy                 # [unix]
-        - test -f $PREFIX/bin/kinit                    # [unix]
-        - test -f $PREFIX/bin/klist                    # [unix]
-        - test ! -f $PREFIX/bin/krb5-config            # [unix]
+        # Test that utilities work (show usage when called incorrectly)
+        - kinit 2>&1 | grep -q "Usage:" || true                # [unix]
+        - klist 2>&1 | grep -q "Usage:" || true                # [unix]
+        - kadmin 2>&1 | grep -q "Usage:" || true               # [unix]
+        # Test essential user utilities exist
+        - test -f $PREFIX/bin/kinit                            # [unix]
+        - test -f $PREFIX/bin/klist                            # [unix]
+        - test -f $PREFIX/bin/kdestroy                         # [unix]
+        - test -f $PREFIX/bin/kpasswd                          # [unix]
+        - test -f $PREFIX/bin/kswitch                          # [unix]
+        - test -f $PREFIX/bin/ktutil                           # [unix]
+        - test -f $PREFIX/bin/kvno                             # [unix]
+        - test -f $PREFIX/bin/k5srvutil                        # [unix]
+        - test -f $PREFIX/bin/kadmin                           # [unix]
+        - test -f $PREFIX/bin/gss-client                       # [unix]
+        - test -f $PREFIX/bin/sclient                          # [unix]
+        # Test Linux-specific utilities
+        - test -f $PREFIX/bin/ksu                              # [linux]
+        # Test server utilities
+        - test -f $PREFIX/sbin/kadmin.local                    # [unix]
+        - test -f $PREFIX/sbin/kadmind                         # [unix]
+        - test -f $PREFIX/sbin/kdb5_util                       # [unix]
+        - test -f $PREFIX/sbin/krb5kdc                         # [unix]
+        - test -f $PREFIX/sbin/gss-server                      # [unix]
+        # Test Windows executables
+        - test -f $PREFIX/Library/bin/kinit.exe                # [win]
+        - test -f $PREFIX/Library/bin/klist.exe                # [win]
+        - test -f $PREFIX/Library/bin/kdestroy.exe             # [win]
+        - test -f $PREFIX/Library/bin/kpasswd.exe              # [win]
+        - test -f $PREFIX/Library/bin/kvno.exe                 # [win]
+        - test -f $PREFIX/Library/bin/gss-client.exe           # [win]
+        # Test man pages for utilities exist
+        - test -f $PREFIX/share/man/man1/kinit.1               # [unix]
+        - test -f $PREFIX/share/man/man1/klist.1               # [unix]
+        - test -f $PREFIX/share/man/man1/kadmin.1              # [unix]
+        - test -f $PREFIX/share/man/man8/kadmin.local.8        # [unix]
+        - test -f $PREFIX/share/man/man8/krb5kdc.8             # [unix]
+        # Ensure development tools are NOT in krb5 package
+        - test ! -f $PREFIX/bin/krb5-config                    # [unix]
+        - test ! -f $PREFIX/bin/compile_et                     # [unix]
+        # Ensure libraries are NOT duplicated in krb5 package
+        - test ! -f $PREFIX/lib/libkrb5.so                     # [linux]
+        - test ! -f $PREFIX/lib/libkrb5.dylib                  # [osx]
 
 about:
   home: https://web.mit.edu/kerberos/
