Add lib and DLLs on Windows explicitely

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,8 +62,24 @@ outputs:
       - lib/libverto*.dylib       # [osx]
       - lib/libcrypto*.dylib      # [osx]
       - lib/libssl*.dylib         # [osx]
-      - Library/lib/*.lib         # [win]
-      - Library/bin/*.dll         # [win]
+      # Windows import libraries (.lib files)
+      - Library/lib/krb5_64.lib         # [win]
+      - Library/lib/gssapi64.lib        # [win]
+      - Library/lib/comerr64.lib        # [win]
+      - Library/lib/k5sprt64.lib        # [win]
+      - Library/lib/krbcc64.lib         # [win]
+      - Library/lib/xpprof64.lib        # [win]
+      - Library/lib/leashw64.lib        # [win]
+      - Library/lib/kfwlogon.lib        # [win]
+      # Windows runtime libraries (.dll files) 
+      - Library/bin/krb5_64.dll         # [win]
+      - Library/bin/gssapi64.dll        # [win]
+      - Library/bin/comerr64.dll        # [win]
+      - Library/bin/k5sprt64.dll        # [win]
+      - Library/bin/krbcc64.dll         # [win]
+      - Library/bin/xpprof64.dll        # [win]
+      - Library/bin/leashw64.dll        # [win]
+      - Library/bin/kfwlogon.dll        # [win]
       # Headers  
       - include/**/*              # [unix]
       - Library/include/**/*      # [win]
